Updated styles, scripts, and added HTML files for the E-commerce web app

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <h1 id="snak"></h1>
         </div>
     </div>
+
+    <div id="product">
+        <h1 style="color: rgb(122, 60, 60); text-align: center;">Our Products</h1>
+    </div>
 </body>
 </html>
 <script src="script.js"></script>
